--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>
+<!-- <div class="app-title">
   {{title}}
-</h1>
+</div>
+<app-introduction></app-introduction> -->
+
+<router-outlet></router-outlet>
