--- a/src/app/quiz/quiz.component.css
+++ b/src/app/quiz/quiz.component.css
@@ -1,39 +1,86 @@
 .question-container {
     display: inline-block;
     width: 100%;
-}
-
-.question {
-    width: 80%;
-    height: 5rem;
-    background-color: coral;
-    display: inline-block;
-    contain: strict;
-    font-size: 2rem;
-}
-
-.timer {
-    width: 20%;
-    height: 5rem;
-    background-color: aqua;
-    font-size: 4rem;
-    display: inline-block;
-    contain: strict;
+    margin-bottom: 1rem;
     text-align: center;
 }
 
+.question {
+    width: 90%;
+    height: 7rem;
+    /* background-color:#666600;
+    color: white; */
+    display: inline-block;
+    contain: strict;
+    font-size: 2.5rem;
+}
+
+.timer-container {
+    width: 20%;
+    background-color: red;
+    align-content: center;
+}
+
+.timer {
+    width: 5rem;
+    height: 5rem;
+    background: #660000;
+    color: white;
+    font-size: 3.5rem;
+    display: inline-block;
+    contain: strict;
+    text-align: center;
+    border-radius: 1rem;
+    float: right;
+}
+
 .answer {
-    width: 200px;
+    /* width: 200px;
     height: 200px;
     background-color: salmon;
     contain: strict;
-    font-size: 2rem;
+    font-size: 2rem; */
+ 
 }
 
 .answer-container {
-    display: inline-block;
+    /* display: inline-block; */
+    align-self: stretch;
+    background: #006;
+    color: white;
+    /* font-family: Verdana, sans-serif; */
+    font-size: 2.5rem;
+    border: 1px solid #8080ff;
+    border-radius: 0.5em;
+    text-align: center;
+    line-height: 3em;
+    outline: none;
 }
 
 .answers {
-    background-color: lightgreen;
+    /* background-color: lightgreen; */
 }
+
+.answer-container:nth-child(1) {
+    grid-area: 1 / 2 / 2 / 3;
+}
+  
+.answer-container:nth-child(2) {
+    grid-area: 1 / 3 / 2 / 4;
+}
+
+.answer-container:nth-child(3) {
+    grid-area: 2 / 2 / 3 / 3;
+}
+
+.answer-container:nth-child(4) {
+    grid-area: 2 / 3 / 3 / 4;
+}
+
+  .answers {
+    display: grid;
+    grid-template-columns: 5em 1fr 1fr 5em;
+    grid-template-rows: 7em 7em;
+    grid-column-gap: 1em;
+    grid-row-gap: 1em;
+  }
