--- a/src/app/summary/summary.component.css
+++ b/src/app/summary/summary.component.css
@@ -1,7 +1,53 @@
+* {
+    font-size: 1.5rem;
+}
+
 .correct-answer {
-    background-color: green;
+    color: green !important;
+    font-weight: bold;
+    /* color: white; */
 }
 
 .wrong-answer {
-    background-color: red;
+    /* background-color: red; */
+    color: red !important;
+    font-weight: bold;
+
 }
+
+.answer {
+    height: 2rem;
+    width: 100%;
+    border: 1px solid black;
+    background-color: white;
+    color: black;
+    border-radius: 0.5rem;
+    overflow: hidden;
+}
+
+.container {
+    margin-bottom: 1rem;
+    /* border: 3px solid red; */
+    background-color: #006;
+    color: white;
+    text-align: center;
+    border-radius: 1rem;
+
+}
+
+.question {
+    /* background-color: aquamarine */
+}
+
+.answers {
+    width: 80%;
+    display: inline-block;
+    /* background-color: white; */
+}
+/* .container:nth-child(even) {
+    background-color:yellow
+}
+
+.container:nth-child(odd) {
+    background-color: aquamarine
+} */
