--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -1,26 +1,18 @@
-<p>
-  summary works!
-</p>
+<ng-container *ngFor="let question of quizService.questions; let i=index">
+  <div class="container">
+    <div class="question">
+      <span>{{i+1}}.{{question.text}}</span>
+      <!-- id odp ok: {{ question.correctAnswerId}} -->
+    </div>
 
-<h3>Questions with correct answer</h3>
-    <ng-container *ngFor="let question of quizService.questions; let i=index">
-        <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-                <span class="card-title">{{i+1}}</span>
-                {{question.text}}
-                id odp ok: {{ question.correctAnswerId}}
-            </div>
-
-            <div class="card-action">
-                <ul class="collection">
-                    <ng-container *ngFor="let answer of question.answers; let j = index">
-                        <li *ngIf="answer != null" class="collection-item" 
-                            [ngClass]="{'correct-answer': answer.id == question.correctAnswerId,
+    <div class="answers">
+      <ng-container *ngFor="let answer of question.answers; let j = index">
+        <div *ngIf="answer != null" class="answer"
+          [ngClass]="{'correct-answer': answer.id == question.correctAnswerId,
                                         'wrong-answer': answer.id == question.userAnswerId && question.userAnswerId != question.correctAnswerId}">
-                            {{answer.text}} user={{question.userAnswerId}} correct={{ question.correctAnswerId}} ans={{answer.id}}
-                        </li>
-                    </ng-container>
-                </ul>
-            </div>
+          {{answer.text}}
         </div>
-    </ng-container>
+      </ng-container>
+    </div>
+  </div>
+</ng-container>
